--- a/src/main/resources/templates/fragments/siderBar.html
+++ b/src/main/resources/templates/fragments/siderBar.html
@@ -22,10 +22,27 @@
     <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
         <a href="#home" class="w3-bar-item w3-button">How are you ?</a>
         <!-- Right-sided navbar links. Hide them on small screens -->
+<!--        <div th:unless="${booleanTest}" class="w3-right w3-hide-small">-->
+<!--            <a href="#about" class="w3-bar-item w3-button">About</a>-->
+<!--            <a href="#menu" class="w3-bar-item w3-button">Menu</a>-->
+<!--            <a href="#contact" class="w3-bar-item w3-button">Contact</a>-->
+<!--            <a href="#id01" onclick="document.getElementById('id01').style.display='block'" class="w3-bar-item w3-button">Login</a>-->
+<!--        </div>-->
+
+<!--        <div th:if="${booleanTest}" class="w3-right w3-hide-small">-->
+<!--            <a href="#about" class="w3-bar-item w3-button">프로젝트 소개</a>-->
+<!--            <a href="#menu" class="w3-bar-item w3-button">오늘의 질문</a>-->
+<!--            <a href="#itemStore" class="w3-bar-item w3-button">아이템 상점</a>-->
+<!--            <a href="#contact" class="w3-bar-item w3-button">문의</a>-->
+<!--            <a href="#contact" class="w3-bar-item w3-button">마이페이지</a>-->
+<!--            <a href="#id01" onclick="document.getElementById('id01').style.display='block'" class="w3-bar-item w3-button">Login</a>-->
+<!--        </div>-->
+
         <div class="w3-right w3-hide-small">
             <a href="#about" class="w3-bar-item w3-button">About</a>
             <a href="#menu" class="w3-bar-item w3-button">Menu</a>
             <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+            <a href="#id01" onclick="document.getElementById('id01').style.display='block'" class="w3-bar-item w3-button">Login</a>
         </div>
     </div>
 </div>
