--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,8 +16,10 @@
         <header class="w3-center w3-margin-bottom">
             <h3 style="font-size: 100px; font-weight: 700;"><b>How are you?</b></h3>
             <h1>당신의 하루는 어땠나요? 당신의 생각은 어떤가요?</h1>
-<!--            <p class="w3-padding-16"><a class="w3-button w3-black">이야기하러 가기!</a></p>-->
             <div th:replace="fragments/login :: login"></div>
+            <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-green w3-xlarge" style="height: 56px;margin: 30px;">이야기 작성하기</button>
+<!--            <p class="w3-padding-16"><a class="w3-button w3-black">이야기하러 가기!</a></p>-->
+
         </header>
     </div>
 
