--- a/src/main/resources/templates/fragments/login.html
+++ b/src/main/resources/templates/fragments/login.html
@@ -31,3 +31,8 @@
     </div>
 </div>
 </html>
+
+<!--<a sec:authorize="!isAuthenticated()" class="btn btn-info" th:href="@{/user/login}">로그인</a>-->
+<!--<form th:action="@{/logout}" method="POST" sec:authorize="isAuthenticated()">-->
+<!--    <button class="btn btn-info" type="submit">로그아웃</button>-->
+<!--</form>-->
