--- a/src/main/resources/templates/createMemberForm.html
+++ b/src/main/resources/templates/createMemberForm.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
 <!--<div th:replace="fragments/siderBar :: siderBar"></div>-->
+<head>
+    <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script type="text/javascript" src="/js/member.js"></script>
 </head>
 <style>
     .fieldError {
         border-color: #bd2130;
+    }
 
+    .fontError {
+        color: #bd2130;
     }
 </style>
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,51 +20,44 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <body>
 <div style="display: flex;justify-content: center;" >
-<form role="form" action="/members/join" th:object="${memberForm}" method="post" class="w3-container w3-card-4 w3-light-grey w3-text-blue" style="margin: auto">
+<form class="w3-container w3-card-4 w3-light-grey w3-text-blue" style="margin: auto">
     <h2 class="w3-center"><b>회원가입</b></h2>
     <div class="w3-row w3-section">
-        <label th:for="userName">아이디</label>
-        <input type="text" th:field="*{userName}" class="form-control"
-               placeholder="아이디를 입력하세요"
-               th:class="${#fields.hasErrors('userName')}? 'form-control fieldError' : 'form-control'">
-        <p th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}" style="color: #bd2130;">Incorrect date</p>
+        <label>아이디</label>
+        <input type="text" id="loginId" name="loginId" class="form-control" placeholder="아이디를 입력하세요">
+        <p class="fontError">Incorrect date</p>
     </div>
 
     <div class="w3-row w3-section">
-        <label th:for="password">비밀번호</label>
-        <input type="text" th:field="*{password}" class="form-control"
-               placeholder="비밀번호를 입력하세요"
-               th:class="${#fields.hasErrors('password')}? 'form-control fieldError' : 'form-control'">
-        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: #bd2130;">Incorrect date</p>
+        <label>비밀번호</label>
+        <input type="text" id="loginPassword" name="loginPassword" class="form-control" placeholder="비밀번호를 입력하세요">
+        <p class="fontError">Incorrect date</p>
+    </div>
+    <div class="w3-row w3-section">
+        <label>이름</label>
+        <input type="text" id="name" name="name" class="form-control" placeholder="이름을 입력하세요">
+        <p class="fontError">Incorrect date</p>
     </div>
 
     <div class="w3-row w3-section">
-        <label th:for="name">이름</label>
-        <input type="text" th:field="*{name}" class="form-control"
-               placeholder="이름을 입력하세요"
-               th:class="${#fields.hasErrors('name')}? 'form-control fieldError' : 'form-control'">
-        <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: #bd2130;">Incorrect date</p>
+        <label>생년월일</label>
+        <input type="text" id="birth" name="birth" class="form-control"
+               placeholder="생년월일을 입력하세요">
+        <p class="fontError">Incorrect date</p>
     </div>
 
     <div class="w3-row w3-section">
-        <label th:for="birth">생년월일</label>
-        <input type="text" th:field="*{birth}" class="form-control"
-               placeholder="생년월일을 입력하세요"
-               th:class="${#fields.hasErrors('birth')}? 'form-control fieldError' : 'form-control'">
-        <p th:if="${#fields.hasErrors('birth')}" th:errors="*{birth}" style="color: #bd2130;">Incorrect date</p>
+        <label>이메일</label>
+        <input type="text" id="email" name="email" class="form-control"
+               placeholder="이메일을 입력하세요">
+        <p class="fontError">Incorrect date</p>
     </div>
 
-    <div class="w3-row w3-section">
-        <label th:for="email">이메일</label>
-        <input type="text" th:field="*{email}" class="form-control"
-               placeholder="이메일을 입력하세요"
-               th:class="${#fields.hasErrors('email')}? 'form-control fieldError' : 'form-control'">
-        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" style="color: #bd2130;">Incorrect date</p>
-    </div>
+
 
     <p class="w3-center">
         <a type="button" class="w3-button w3-section w3-red w3-ripple" href="/">취소</a>
-    <button type="submit" class="w3-button w3-section w3-blue w3-ripple" style="color: #bd2130;">작성완료</button>
+    <button type="button" class="w3-button w3-section w3-blue w3-ripple" onclick="joinMember()" style="color: #bd2130;">작성완료</button>
     </p>
 </form>
 </div>
@@ -66,6 +66,8 @@
 <!--<nav th:replace="fragments/footer :: footer"></nav>-->
 
 </body>
+
+
 </html>
 
 
