--- a/src/main/resources/templates/fragments/siderBar.html
+++ b/src/main/resources/templates/fragments/siderBar.html
@@ -42,6 +42,7 @@
             <a href="#about" class="w3-bar-item w3-button">About</a>
             <a href="#menu" class="w3-bar-item w3-button">Menu</a>
             <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+            <a href="#contact" class="w3-bar-item w3-button">마이페이지</a>
             <a href="#id01" onclick="document.getElementById('id01').style.display='block'" class="w3-bar-item w3-button">Login</a>
         </div>
     </div>
