--- a/src/main/resources/templates/createMemberForm.html
+++ b/src/main/resources/templates/createMemberForm.html
@@ -14,6 +14,10 @@
     .fontError {
         color: #bd2130;
     }
+
+    .fontBlue {
+        color: #0b28b3;
+    }
 </style>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -25,32 +29,32 @@
     <div class="w3-row w3-section">
         <label>아이디</label>
         <input type="text" id="loginId" name="loginId" class="form-control" placeholder="아이디를 입력하세요">
-        <p class="fontError">Incorrect date</p>
+        <p class="fontError">값을 입력해 주세요.</p>
     </div>
 
     <div class="w3-row w3-section">
         <label>비밀번호</label>
         <input type="text" id="loginPassword" name="loginPassword" class="form-control" placeholder="비밀번호를 입력하세요">
-        <p class="fontError">Incorrect date</p>
+        <p class="fontError">값을 입력해 주세요.</p>
     </div>
     <div class="w3-row w3-section">
         <label>이름</label>
         <input type="text" id="name" name="name" class="form-control" placeholder="이름을 입력하세요">
-        <p class="fontError">Incorrect date</p>
+        <p class="fontError">값을 입력해 주세요.</p>
     </div>
 
     <div class="w3-row w3-section">
         <label>생년월일</label>
         <input type="text" id="birth" name="birth" class="form-control"
                placeholder="생년월일을 입력하세요">
-        <p class="fontError">Incorrect date</p>
+        <p class="fontError">값을 입력해 주세요.</p>
     </div>
 
     <div class="w3-row w3-section">
         <label>이메일</label>
         <input type="text" id="email" name="email" class="form-control"
                placeholder="이메일을 입력하세요">
-        <p class="fontError">Incorrect date</p>
+        <p class="fontError">값을 입력해 주세요.</p>
     </div>
 
 
