--- a/src/main/resources/templates/createMemberForm.html
+++ b/src/main/resources/templates/createMemberForm.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://thymeleaf.org">
 <!--<div th:replace="fragments/siderBar :: siderBar"></div>-->
 <head>
-    <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="text/javascript" src="/js/member.js"></script>
 </head>
