--- a/src/main/resources/templates/fragments/login.html
+++ b/src/main/resources/templates/fragments/login.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<head>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script type="text/javascript" src="/js/member.js"></script>
+</head>
 
 <div th:fragment="login" class="w3-container">
 
@@ -11,13 +16,13 @@
                 <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-xlarge w3-transparent w3-display-topright" title="Close Modal">×</span>
             </div>
 
-            <form class="w3-container" action="">
+            <form class="w3-container">
                 <div class="w3-section">
-                    <label><b>Username</b></label>
-                    <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" name="usrname" required>
-                    <label><b>Password</b></label>
-                    <input class="w3-input w3-border" type="text" placeholder="Enter Password" name="psw" required>
-                    <button class="w3-button w3-block w3-green w3-section w3-padding" type="submit">Login</button>
+                    <label><b>아이디</b></label>
+                    <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter LoginId" id="loginId" name="loginId" required>
+                    <label><b>비밀번호</b></label>
+                    <input class="w3-input w3-border" type="text" placeholder="Enter Password" id="loginPassword" name="loginPassword" required>
+                    <button class="w3-button w3-block w3-green w3-section w3-padding" type="button" onclick="loginMember();">Login</button>
                     <input class="w3-check w3-margin-top" type="checkbox" checked="checked"> Remember me
                 </div>
             </form>
