--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script type="text/javascript" src="/js/member.js"></script>
 <head th:replace="fragments/header :: header">
 </head>
 
