--- a/src/main/resources/templates/createMemberForm.html
+++ b/src/main/resources/templates/createMemberForm.html
@@ -34,7 +34,7 @@
 
     <div class="w3-row w3-section">
         <label>비밀번호</label>
-        <input type="text" id="loginPassword" name="loginPassword" class="form-control" placeholder="비밀번호를 입력하세요">
+        <input type="password" maxlength='12' id="loginPassword" name="loginPassword" class="form-control" placeholder="비밀번호를 입력하세요">
         <p class="fontError">값을 입력해 주세요.</p>
     </div>
     <div class="w3-row w3-section">
