--- a/src/main/resources/templates/fragments/login.html
+++ b/src/main/resources/templates/fragments/login.html
@@ -21,7 +21,7 @@
                     <label><b>아이디</b></label>
                     <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter LoginId" id="loginId" name="loginId" required>
                     <label><b>비밀번호</b></label>
-                    <input class="w3-input w3-border" type="text" placeholder="Enter Password" id="loginPassword" name="loginPassword" required>
+                    <input class="w3-input w3-border" type="password" maxlength='12' placeholder="Enter Password" id="loginPassword" name="loginPassword" required>
                     <button class="w3-button w3-block w3-green w3-section w3-padding" type="button" onclick="loginMember();">Login</button>
                     <input class="w3-check w3-margin-top" type="checkbox" checked="checked"> Remember me
                 </div>
