--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -11,7 +10,7 @@
 
 <div class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-right" style="width:200px;right:0; padding: 30px 16px;" id="mySidebar">
   <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>
-  <a href="#" class="w3-bar-item w3-button">나의 정보</a>
+  <a href="/members/myPage" class="w3-bar-item w3-button">나의 정보</a>
   <a href="#" class="w3-bar-item w3-button">나의 아이템</a>
   <a href="#" class="w3-bar-item w3-button">나의 질문답변</a>
 </div>
@@ -25,41 +24,39 @@
   </div>
 
   <div class="w3-container">
-
-
     <p><label>아이디</label>
-      <input class="w3-input w3-border" id="loginId" name="last" type="text"></p>
+      <input class="w3-input w3-border" id="loginId" name="last" type="text" disabled="disabled"></p>
 
     <p><label>비밀번호</label>
     <div class="w3-row-padding">
       <div class="w3-half">
         <label>First Name</label>
-        <input class="w3-input w3-border" type="text" placeholder="Two">
+        <input id="loginPassword" class="w3-input w3-border" type="text" placeholder="Two">
       </div>
       <div class="w3-half">
         <label>Last Name</label>
-        <input class="w3-input w3-border" type="text" placeholder="Three">
+        <input id="checkPassword" class="w3-input w3-border" type="text" placeholder="Three">
       </div>
     </div>
 
     <p><label>이름</label>
-      <input class="w3-input w3-border" id="name" name="first" type="text"></p>
+      <input class="w3-input w3-border" id="name" name="first" type="text" disabled="disabled"></p>
 
     <p><label>생년월일</label>
-      <input class="w3-input w3-border" id="birth" name="last" type="text"></p>
+      <input class="w3-input w3-border" id="birth" name="last" type="text" disabled="disabled"> </p>
 
     <p><label>이메일</label>
-    <div class="w3-row-padding" id="email">
+    <div class="w3-row-padding" >
       <div class="w3-half">
-        <label>First Name</label>
-        <input class="w3-input w3-border"  type="text" placeholder="Two">
+        <input class="w3-input w3-border" id="email" type="text" placeholder="Two">
       </div>
       <div class="w3-half">
-        <label>Last Name</label>
-        <input class="w3-input w3-border" type="text" placeholder="Three">
+        <input class="w3-input w3-border" id="email2" type="text" placeholder="Three">
+
       </div>
     </div>
-    <button class="w3-button w3-round-xlarge w3-teal" onclick="updateMember();">수정</button>
+    <button class="w3-button w3-round-xlarge w3-teal" onclick="updatePassword();">비밀번호 수정</button>
+    <button class="w3-button w3-round-xlarge w3-teal" onclick="updateEmail();">이메일 수정</button>
   </div>
 
 </div>
