--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -9,7 +9,7 @@
 <div th:replace="fragments/siderBar :: siderBar"></div>
 
 <div class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-right" style="width:200px;right:0; padding: 30px 16px;" id="mySidebar">
-  <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>
+  <button class="w3-bar-item w3-button w3-large" onclick="w3_close()">Close &times;</button>
   <a href="/members/myPage" class="w3-bar-item w3-button">나의 정보</a>
   <a href="#" class="w3-bar-item w3-button">나의 아이템</a>
   <a href="#" class="w3-bar-item w3-button">나의 질문답변</a>
@@ -17,7 +17,7 @@
 
 <div class="w3-main" style="margin-right:200px; margin-top: 53px">
   <div class="w3-teal">
-    <button class="w3-button w3-teal w3-xlarge w3-right w3-hide-large" onclick="w3_open()">&#9776;</button>
+<!--    <button class="w3-button w3-teal w3-xlarge w3-right w3-hide-large" onclick="w3_open()">&#9776;</button>-->
     <div class="w3-container">
       <h1>My Page</h1>
     </div>
