--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -42,7 +42,7 @@
         <h3>John Doe</h3>
     </header>
 
-    <div class="w3-container">
+    <div id="title" class="w3-container">
         <p>1 new friend request</p>
         <hr>
         <img src="/css2/file.jpg" alt="Avatar" class="w3-left w3-circle" style="height: 200px">
