--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,6 +3,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script type="text/javascript" src="/js/member.js"></script>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <head th:replace="fragments/header :: header">
 </head>
 
@@ -36,10 +37,22 @@
             </div>
 
             <div class="w3-col m6 w3-padding-large">
-                <h1 class="w3-center">About Catering</h1><br>
-                <h5 class="w3-center">Tradition since 1889</h5>
-                <p class="w3-large">한국어로하면 깨지나여 founded in blabla by Mr. Smith in lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iruredolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.We only use <span class="w3-tag w3-light-grey">seasonal</span> ingredients.</p>
-                <p class="w3-large w3-text-grey w3-hide-medium">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod temporincididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <h1 class="w3-center">프로젝트 소개</h1><br>
+                <h5 class="w3-center">Tradition since 2023 </h5>
+                <p class="w3-large" style="line-height: 32px;">
+                    <span class="w3-tag w3-light-grey">How are you?</span> 는 오늘 어때? , 안녕? 등의 의미로 널리 알려져 있다.
+                    우리 나라 사람들의 공통 대답은 I’m fine , 괜찮아, 좋아, 안녕.
+                    정말 fine한걸까? 안녕 한걸까?. 그렇다면 왜 ? 우울증의 지수는 점점 높아져 가는 걸까?
+                   </p>
+                <p class="w3-large" style="line-height: 32px;">
+                    치열한 경쟁 사회에서 사람들은 더욱 스마트해지고 있으면서도, 점차 자기 자신을 잊고 살아갈 때가 많다.
+                    타인에 대해서는 잘 이해하면서도 정작 자기 자신에게는 야박하게 구는 사람들이 많다.
+                </p>
+                <p class="w3-large" style="line-height: 32px;">
+                    SNS에 투자하는 시간도 좋지만,
+                    하루에 1개의 질문을 통해 스스로를 생각해 볼 수 있는 시간을 갖게 되었으면 좋겠다는 마음에 제작하게 되었다.
+                </p>
+<!--                <p class="w3-large w3-text-grey w3-hide-medium">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod temporincididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>-->
             </div>
         </div>
 
@@ -48,21 +61,27 @@
         <!-- Menu Section -->
         <div class="w3-row w3-padding-64" id="menu">
             <div class="w3-col l6 w3-padding-large">
-                <h1 class="w3-center">Our Menu</h1><br>
-                <h4>Bread Basket</h4>
-                <p class="w3-text-grey">한국어로하면 깨지나여  of fresh baked fruit breads and muffins 5.50</p><br>
+                <h1 class="w3-center">아이템 상점</h1><br>
+                <p style=" font-size: 20px">
+                    <span class="material-icons" style="font-size: 40px">psychology_alt</span><a href="/">생각 1개</a>
+                </p>
+                <p class="w3-text-grey">처음 구매하시는 거라면 부담없이 누려보세요. 300원</p><br>
 
-                <h4>Honey Almond Granola with Fruits</h4>
-                <p class="w3-text-grey">Natural cereal of honey toasted oats, raisins, almonds and dates 7.00</p><br>
+                <p style=" font-size: 20px">
+                    <span class="material-icons" style="font-size: 40px">psychology_alt</span><a href="/">생각 15개</a>
+                </p>
+                <p class="w3-text-grey">생각하는 습관을 기르는 중이라면 부담없이 누려보세요. 3,900원</p><br>
 
-                <h4>Belgian Waffle</h4>
-                <p class="w3-text-grey">가나다라마다밧아ㅏ자차가카다  batter with malted flour 7.50</p><br>
 
-                <h4>Scrambled eggs</h4>
-                <p class="w3-text-grey">Scrambled eggs, roasted red pepper and garlic, with green onions 7.50</p><br>
+                <p style=" font-size: 20px">
+                    <span class="material-icons" style="font-size: 40px">psychology_alt</span><a href="/">생각 30개 </a><span class="w3-tag w3-teal">Best!</span>
+                </p>
+                <p class="w3-text-grey">생각하는 습관을 기르는 중이라면 부담없이 누려보세요. 7,900원</p><br>
 
-                <h4>블루베리 팬케이크 Pancakes</h4>
-                <p class="w3-text-grey">안녕하십니까 글씨체 체크크크 of berries 8.50</p>
+                <p style=" font-size: 20px">
+                    <span class="material-icons" style="font-size: 40px">psychology_alt</span><a href="/">심리검사 패키지 </a><span class="w3-tag w3-teal">Best!</span>
+                </p>
+                <p class="w3-text-grey">각종 심리검사를 통해 나를 만나보세요. 99,000원</p><br>
             </div>
 
             <div class="w3-col l6 w3-padding-large">
@@ -74,7 +93,7 @@
 
         <!-- Contact Section -->
         <div class="w3-container w3-padding-64" id="contact">
-            <h1>Contact</h1><br>
+            <h1>만든이 소개</h1><br>
             <p>We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste. Do not hesitate to contact us.</p>
             <p class="w3-text-blue-grey w3-large"><b>Catering Service, 42nd Living St, 43043 New York, NY</b></p>
             <p>You can also contact us by phone 00553123-2323 or email catering@catering.com, or you can send us a message here:</p>
