--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -94,7 +94,12 @@
         <!-- Contact Section -->
         <div class="w3-container w3-padding-64" id="contact">
             <h1>만든이 소개</h1><br>
-            <p>We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste. Do not hesitate to contact us.</p>
+            <p class="w3-text-blue-grey w3-large"><b>Q1.어디에 사는 누구시죠?</b></p>
+            <p>안녕하세요. 경기도 수원에 거주하는 권솔이입니다.</p>
+
+            <p class="w3-text-blue-grey w3-large"><b>Q2.전공이 아닌데 왜 개발자의 길로 오셨나요?</b></p>
+            <p>'진로 고민을 하는 사람들에게 전문적으로 도움을 줄 수 있는 프로그램이 있으면 좋겠다' 라는 생각이 저를 개발자의 길로 들어서게 했습니다. </p>
+            <p> 개발을 공부하면서 API를 만들고 데이터를 유의미한 가치로 만들어 내는 것에 즐거움을 느끼게 되었습니다. </p>
             <p class="w3-text-blue-grey w3-large"><b>Catering Service, 42nd Living St, 43043 New York, NY</b></p>
             <p>You can also contact us by phone 00553123-2323 or email catering@catering.com, or you can send us a message here:</p>
             <form action="/action_page.php" target="_blank">
