--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -30,10 +30,10 @@
 <!--    <p>Albert Einstein</p>-->
 <!--</div>-->
 
-<div class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-right" style="width:200px;right:0; padding: 30px 16px;" id="mySidebar">
-    <button class="w3-bar-item w3-button w3-large " onclick="w3_close()">Close &times;</button>
-    <a href="/members/question" class="w3-bar-item w3-button">오늘의 질문</a>
-    <a href="/members/answer" class="w3-bar-item w3-button">나의 답변조회</a>
+<div class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-right" style="width:200px;right:0; padding: 30px 16px;" id="mySidebar" >
+    <button id="buttonState" class="w3-bar-item w3-button w3-large " onclick="sideOpenClose()" name="open">Close &times;</button>
+    <a href="/question" class="w3-bar-item w3-button">오늘의 질문</a>
+    <a href="/answer" class="w3-bar-item w3-button">나의 답변조회</a>
 </div>
 
 <div class="w3-card-4"style="margin-top: 56px;">
@@ -50,21 +50,13 @@
     </div>
 
     <div class="w3-container">
-    <label class="w3-text-blue"><b>Last Name</b></label>
-    <input class="w3-input w3-border" type="text" style="height: 300px">
+    <label class="w3-text-blue"><b>Answer</b></label>
+    <input type="hidden" id="questionId"value="">
+    <input id="answer" class="w3-input w3-border" type="text" style="height: 300px" >
 
-    <button class="w3-btn w3-blue">답장하기</button>
+    <button class="w3-btn w3-blue" onclick="saveQuestion()">답변하기</button>
     </div>
 
 </div>
-<script>
-    function w3_open() {
-        document.getElementById("mySidebar").style.display = "block";
-    }
-
-    function w3_close() {
-        document.getElementById("mySidebar").style.display = "none";
-    }
-</script>
 </body>
 </html>
