--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -8,8 +8,8 @@
 <body>
 <div th:replace="fragments/siderBar :: siderBar"></div>
 
-<div class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-right" style="width:200px;right:0; padding: 30px 16px;" id="mySidebar">
-  <button class="w3-bar-item w3-button w3-large" onclick="w3_close()">Close &times;</button>
+<div class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-right" style="width:200px;right:0; padding: 30px 16px;display: block;" id="mySidebar">
+  <button id="buttonState" class="w3-bar-item w3-button w3-large" name="open" onclick="sideOpenClose()">Close &times;</button>
   <a href="/members/myPage" class="w3-bar-item w3-button">나의 정보</a>
   <a href="#" class="w3-bar-item w3-button">나의 아이템</a>
   <a href="#" class="w3-bar-item w3-button">나의 질문답변</a>
@@ -60,16 +60,5 @@
   </div>
 
 </div>
-
-<script>
-  function w3_open() {
-    document.getElementById("mySidebar").style.display = "block";
-  }
-
-  function w3_close() {
-    document.getElementById("mySidebar").style.display = "none";
-  }
-</script>
-
 </body>
 </html>
