--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -54,7 +54,7 @@
     <input type="hidden" id="questionId"value="">
     <input id="answer" class="w3-input w3-border" type="text" style="height: 300px" >
 
-    <button class="w3-btn w3-blue" onclick="saveQuestion()">답변하기</button>
+    <button class="w3-btn w3-blue" onclick="updateQuestion();">답변하기</button>
     </div>
 
 </div>
