--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -12,7 +12,7 @@
   <button id="buttonState" class="w3-bar-item w3-button w3-large" name="open" onclick="sideOpenClose()">Close &times;</button>
   <a href="/members/myPage" class="w3-bar-item w3-button">나의 정보</a>
   <a href="#" class="w3-bar-item w3-button questionButton">나의 아이템</a>
-  <a href="#" class="w3-bar-item w3-button">나의 질문답변</a>
+  <a href="/question2" class="w3-bar-item w3-button">나의 질문답변</a>
 </div>
 
 <div class="w3-main" style="margin-right:200px; margin-top: 53px">
