--- a/src/main/resources/templates/questionList.html
+++ b/src/main/resources/templates/questionList.html
@@ -26,16 +26,22 @@
 
   </div>
   <div>
-    <table class="w3-table">
+    <table class="w3-table" style="border: 1px solid black;border-collapse: collapse;">
+      <colgroup>
+        <col width="30%"/>
+        <col width="40%"/>
+        <col width="30%"/>
+      </colgroup>
       <thead>
-      <tr>
+      <tr style="text-align: center;">
         <th>날짜</th>
         <th>제목</th>
+        <th>기타</th>
       </tr>
       </thead>
       <tbody id="questionTbody">
       <tr class="w3-hover-green">
-        <td>검색조건을 설정해주세요.</td>
+        <td colspan="3" style="text-align: center;">검색조건을 설정해주세요.</td>
       </tr>
       </tbody>
     </table>
