--- a/src/main/resources/templates/createMemberForm.html
+++ b/src/main/resources/templates/createMemberForm.html
@@ -4,7 +4,7 @@
 <head>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script type="text/javascript" src="/js/member.js"></script>
+    <script type="text/javascript" src="/js/common.js"></script>
 </head>
 <style>
     .fieldError {
