--- a/src/main/resources/templates/fragments/login.html
+++ b/src/main/resources/templates/fragments/login.html
@@ -3,7 +3,7 @@
 <head>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script type="text/javascript" src="/js/member.js"></script>
+<script type="text/javascript" src="/js/common.js"></script>
 </head>
 
 <div th:fragment="login" class="w3-container">
