update 간편하게 수정

--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -34,6 +34,7 @@
     <div class="w3-container">
     <label class="w3-text-blue"><b>Answer</b></label>
     <input type="hidden" id="questionId" value="">
+    <input type="hidden" id="memberQuestionId" value="">
     <input id="answer" class="w3-input w3-border" type="text" style="height: 300px" >
 
     <button class="w3-btn w3-blue" onclick="updateQuestion();">답변하기</button>
