--- a/src/main/resources/templates/questionList.html
+++ b/src/main/resources/templates/questionList.html
@@ -39,14 +39,14 @@
         <col width="30%"/>
       </colgroup>
       <thead>
-      <tr style="text-align: center;">
+      <tr style="text-align: center;" class="tableSolid">
         <th>날짜</th>
         <th>제목</th>
         <th>기타</th>
       </tr>
       </thead>
       <tbody id="questionTbody">
-      <tr class="w3-hover-green">
+      <tr class="w3-hover-green tableSolid">
         <td colspan="3" style="text-align: center;">검색조건을 설정해주세요.</td>
       </tr>
       </tbody>
