--- a/src/main/resources/templates/questionList.html
+++ b/src/main/resources/templates/questionList.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <style>
   .tableSolid {
-    border-bottom:1px solid #000;
+    border-bottom:1px solid #3d3d3d;
   }
 </style>
 <body>
@@ -40,9 +40,9 @@
       </colgroup>
       <thead>
       <tr style="text-align: center;" class="tableSolid">
-        <th>날짜</th>
-        <th>제목</th>
-        <th>기타</th>
+        <th style="text-align: center;">날짜</th>
+        <th style="text-align: center;">제목</th>
+        <th style="text-align: center;">기타</th>
       </tr>
       </thead>
       <tbody id="questionTbody">
