--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="w3-main" style="margin-right:200px; margin-top: 53px">
-  <div class="w3-teal">
+  <div style="background-color: #42cf8b">
 <!--    <button class="w3-button w3-teal w3-xlarge w3-right w3-hide-large" onclick="w3_open()">&#9776;</button>-->
     <div class="w3-container">
       <h1>My Page</h1>
@@ -31,11 +31,11 @@
     <p><label>비밀번호</label>
     <div>
       <div class="w3-half">
-        <label>First Name</label>
+        <label>기존 비밀번호</label>
         <input id="loginPassword" class="w3-input w3-border" type="text" placeholder="Two">
       </div>
       <div class="w3-half">
-        <label>Last Name</label>
+        <label>변경 비밀번호</label>
         <input id="checkPassword" class="w3-input w3-border" type="text" placeholder="Three">
       </div>
     </div>
@@ -56,7 +56,7 @@
 
       </div>
     </div>
-    <div class="w3-center">>
+    <div class="w3-center">
     <button class="w3-button w3-round-xlarge w3-teal" onclick="updatePassword();">비밀번호 수정</button>
     <button class="w3-button w3-round-xlarge w3-teal" onclick="updateEmail();">이메일 수정</button>
     </div>
